samples/_failures_safe/1761076864_576f7f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_48755c43.c: In function ‘main’:
./samples/SAFE/__tmp_48755c43.c:162:9: error: expected expression at end of input
  162 |         add_edge(&graph, src,
      |         ^~~~~~~~
./samples/SAFE/__tmp_48755c43.c:162:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_48755c43.c:162:9: error: expected declaration or statement at end of input
